deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment
spec:
  selector:
    matchLabels:
      app: java-app
  replicas: 2
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-app
          image: renanafs/java-sample-app:1b789604a9422e6cb66c21e7265876862899ca0d
          ports:
            - containerPort: 8080
